--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,6 +7,10 @@ trigger:
   branches:
     include:
       - master
+  paths: 
+   exclude:
+     - README.md
+     - azure-pipelines.yml
 
 pool:
   name: 'Aida'
