Division de recursos añadido

--- a/GameOfLifeAPI/Properties/launchSettings.json
+++ b/GameOfLifeAPI/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "GameOfLifeAPI": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/gameoflife",
+      "launchUrl": "api/gameoflife/board",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
