--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,7 +44,7 @@ steps:
   inputs:
     folderPath: '$(System.DefaultWorkingDirectory)/**/*.zip'
     fileType: 'json'
-    targetFiles: '**/appsettings.json'
+    targetFiles: 'GameOfLifeAPI/appsettings.json'
 
 
 - task: DotNetCoreCLI@2
