--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,12 +46,18 @@ steps:
     arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
     zipAfterPublish: True
 
-- task: FileTransform@1
-  displayName: "Variables transformation"
+- task: MagicChunks@2
+  displayName: Variables transformation
   inputs:
-    folderPath: '$(System.DefaultWorkingDirectory)/**/*.zip'
-    fileType: 'json'
-    targetFiles: 'GameOfLifeAPI/appsettings.json'
+    sourcePath: 'GameOfLifeAPI/appsettings.json'
+    fileType: 'Json'
+    targetPathType: 'source'
+    transformationType: 'json'
+    transformations: |
+      {
+        "FilePath" : "boardLogAzure.txt"
+      }
+
 
 - task: PublishBuildArtifacts@1
   displayName: drop artifact
