--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,24 +46,17 @@ steps:
     arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
     zipAfterPublish: True
 
-- task: MagicChunks@2
-  displayName: Variables transformation
+- task: FileTransform@2
+  displayName: "Transform Json"
   inputs:
-    sourcePath: 'GameOfLifeAPI/appsettings.json'
-    fileType: 'Json'
-    targetPathType: 'source'
-    transformationType: 'json'
-    transformations: |
-      {
-        "FilePath" : "boardLogAzure.txt"
-      }
-
+    folderPath: '$(System.DefaultWorkingDirectory)/**/'
+    xmlTransformationRules: ''
+    jsonTargetFiles: '**/appsettings.json'
 
 - task: PublishBuildArtifacts@1
   displayName: drop artifact
   inputs:
     pathToPublish: '$(Build.ArtifactStagingDirectory)'
     artifactName: drop
-
 
 
