--- a/GameOfLifeAPI/GameOfLifeAPI.csproj
+++ b/GameOfLifeAPI/GameOfLifeAPI.csproj
@@ -39,6 +39,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.16.0" />
 	</ItemGroup>
+	<ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 
 </Project>
