Removed endpoint logger and appsettings.json modified

--- a/GameOfLifeAPI/appsettings.json
+++ b/GameOfLifeAPI/appsettings.json
@@ -4,8 +4,10 @@
   },
   "Logging": {
     "ApplicationInsights": {
-      "LogLevel": "Debug",
-      "Microsoft": "Error" 
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft" :  "Error" 
+      }
     },
     "LogLevel": {
       "Default": "Information",
