Endpoint logger removed and appsettings modified

--- a/GameOfLifeAPI/appsettings.json
+++ b/GameOfLifeAPI/appsettings.json
@@ -5,8 +5,7 @@
   "Logging": {
     "ApplicationInsights": {
       "LogLevel": {
-        "Default": "Information",
-        "Microsoft" :  "Error" 
+        "Default": "Information"
       }
     },
     "LogLevel": {
