Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,8 @@ pool:
   name: 'Aida'
 
 variables:
-  FilePath : $(path)
+  FilePath : '$(System.DefaultWorkingDirectory)/$(path)'
+  DirectoryLogs : '$(System.DefaultWorkingDirectory)'
 
 steps:
 - task: UseDotNet@2
