Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ pool:
   name: 'Aida'
 
 variables:
-  FilePath : '$(System.DefaultWorkingDirectory)/$(path)'
+  FilePath : '$(System.DefaultWorkingDirectory)\GameOfLifeAPI\$(path)'
   DirectoryLogs : '$(System.DefaultWorkingDirectory)'
 
 steps:
