--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ pool:
 
 variables:
   FilePath : '$(System.DefaultWorkingDirectory)\GameOfLifeAPI\$(path)'
-  DirectoryLogs : '$(System.DefaultWorkingDirectory)'
+  DirectoryLogs : '$(System.DefaultWorkingDirectory)\\GameOfLifeAPI'
 
 steps:
 - task: UseDotNet@2
