--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,8 +16,8 @@ pool:
   name: 'Aida'
 
 variables:
-  FilePath : '$(System.DefaultWorkingDirectory)\GameOfLifeAPI\$(path)'
-  DirectoryLogs : '$(System.DefaultWorkingDirectory)\GameOfLifeAPI'
+  FilePath : '$(System.DefaultWorkingDirectory)/GameOfLifeAPI/$(path)'
+  DirectoryLogs : '$(System.DefaultWorkingDirectory)/GameOfLifeAPI'
 
 steps:
 - task: UseDotNet@2
