--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,8 +16,8 @@ pool:
   name: 'Aida'
 
 variables:
-  FilePath : '$(path)'
-  DirectoryLogs : '$(System.DefaultWorkingDirectory)'
+  FilePath : 'GameOfLifeAPI/$(path)'
+  DirectoryLogs : 'GameOfLifeAPI'
 
 steps:
 - task: UseDotNet@2
